
Revision history for Net::DNS                                     -*-text-*-
=============================

*** 0.57 NOT RELEASE YET

Fix dependency on "CC"

   The Makefile.PL depended on availabliltity of "cc" and would bail
   out on systems where gcc is exclusivly available. Thanks to Rob
   Windsor for noticing and patching.

Fix compressed dnames in NAPTR/SRV

    Clayton O'Neill noted that the the domain names in in the NAPTR
    and SRV RRs rdata were subject to name compression which is not
    conform the specs. Also see RFC 2782 and 2915.


Fix rt.cpan.org 18897

   Zero-length rdata in TXT fixed (Acknowledgements to Roy Arends)

Fix rt.cpan.org 18785

   SPF would not work unless the TXT RR was not loaded first. No
   wonder, SPF fully inherits TXT and loading of TXT.pm is therefore a
   prerequisit.


Fix rt.cpan.org 18713

    Net::DNS::Resolver now deals gracefully with persistent sockets
    that got disconnected. It will first try to connect again to the
    socket and if that fails it will try to connect to the next
    available nameserver. tcp_timeout() is the parameter that
    determines how long to wait during a reconnect.

Fix rt.cpan.org 18268

     Added reference to RFC in croak message for label length > 63 in
     dn_comp().

Fix rt.cpan.org  18113

    The inet6 tests contained another bug when online-tests were disabled.
    Klaus Heinz discovered and provided a patch.

*** 0.57 February 24, 2006

Fix rt.cpan.org 17783

    The inet6 tests do not skip enough tests when ipv6 is not available.
    I did not catch this in my setup since IPv6 is available on all my
    machines. 

    Since this breaks automatic CPAN installs a new release is
    reasonable.


*** 0.56 February 20, 2006

Fix rt.cpan.org 17694
 
   Net::DNS::typesbyval() now confesses on undefined
   args. Acknowledgements to Dean Serenevy.

Feature Implemented SPF (typecode 99).

   The class completely inherits from Net::DNS::RR::TXT (the easiest 